2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_attr.c, bgp_snmp.c, bgp_vty.c, bgpd.[ch]: Remove support for old
	  draft - ie. "neighbor version 4-" commands. Preserve dummy "neighbor
	  version" command as deprecated.

2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgpd.[ch], bgp_vty.c, bgp_route.c: "Restart session after
	  maximum-prefix limit" feature support.

2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_nexthop.c: Improve debug.
	* bgpd.[ch], bgp_nexthop.c, bgp_snmp.c: Remove useless bgp_get_master()
	  function.
	* bgp_packet.c: MP AFI_IP update and withdraw parsing.
	* bgp_fsm.c: Reset peer synctime in bgp_stop(). bgp_fsm_change_status()
	  is better place to log about peer status change than bgp_event().
	  Log in bgp_connect_success().
	* bgp_vty.c: Fix typo in comment.
	* bgp_attr.c: Better log about unknown attribute.

2005-01-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_filter.c: (ip_as_path,no_ip_as_path) Use argv_concat instead
	  of buffer_getstr.
	* bgp_route.c: (bgp_show_regexp) Fix memory leak: need to free string
	  returned by buffer_getstr.
	  (bgp_show_community) Must use XFREE instead of free on string
	  returned by buffer_getstr.
	* bgp_routemap.c: (set_community) Must use XFREE instead of free
	  on string returned by buffer_getstr.
	* bgp_vty.c: (neighbor_description) Use argv_concat instead of
	  buffer_getstr.

2005-01-24 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Fix showstopper bug. New route must be selected also
	  if old one is flaged as BGP_INFO_ATTR_CHANGED.

2005-01-17 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Clear peer's routing table regardless whether it's
	  configured or not. Being not configured is even better reason to
	  do it.

2005-01-05 Paul Jakma <paul@dishone.st>

	* bgp_packet.c: (bgp_write) set socket to nonblock while writing
          this should be generalised. See bugzilla #102. Fix supplied by
	  wawa@yandex-team.ru (Vladimir Ivanov).
